--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -1,1 +1,1 @@
-<%- include('../layout', { body: body, title: title }) %>
+<%- include('../layout', { body: body, title: title, forceLegacy: true }) %>
